fixed vertical alignment of h1

--- a/surf.css
+++ b/surf.css
@@ -10,16 +10,26 @@
 
 
 header {
-  background-image: url("http://lorempixel.com/image_output/nature-q-g-1920-1920-5.jpg");
+  background-image: url("http://lorempixel.com/image_output/abstract-q-g-1920-480-10.jpg");
   overflow: hidden;
   width: 100%;
   height: 36rem;
 }
+/*
+header div:nth-child(an+b) {
+  color: yellow;
+}*/
+
+.fa-tint:before {
+    content: "\f043";
+    padding-right: 1.3rem;
+}
+
 .logo {
-  display: inline-block;
+  float: left;
   color: white;
-  margin-left: 12.5rem;
-  margin-top: 1.3rem;
+  margin-left: 10.3rem;
+  margin-top: 0.5rem;
 
 }
 .logo i {
@@ -29,12 +39,15 @@ header {
 .logo a {
   color: white;
   text-decoration: none;
+  font-size: 1.3rem;
+  letter-spacing: -0.17rem;
 }
 header h1 {
   font-family: 'Oswald';
-  font-size: 6.04rem;
+  font-size: 6rem;
   letter-spacing: 1rem;
-  height: 100%;
+  height: 77%;
+  width: 100%;
   margin: 0 auto;
   color: white;
   display: -webkit-flex;
@@ -44,6 +57,11 @@ header h1 {
   -webkit-justify-content: center;
           justify-content: center;
 }
+
+h4 {
+  color: yellow;
+}
+
 .topnav {
   float: right;
   margin-right: 11.2rem;
